setup two font families

--- a/frontend/vue-app/index.html
+++ b/frontend/vue-app/index.html
@@ -12,19 +12,6 @@
     />
     <title>Eventful</title>
     <!-- GOOGLE FONTS -->
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
-      rel="stylesheet"
-    />
     <!--    INTER    -->
     <link
       rel="preconnect"
@@ -37,6 +24,20 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Rajdhani&family=Source+Sans+3&display=swap"
+      rel="stylesheet"
+    />
+    <!--    DM SERIF   -->
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap"
       rel="stylesheet"
     />
   </head>
