Added dynamic NavBar

--- a/frontend/vue-app/index.html
+++ b/frontend/vue-app/index.html
@@ -41,7 +41,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-base-200 text-base-content mx-2 sm:mx-4">
+  <body class="bg-base-200 text-base-content">
     <div id="app"></div>
     <script
       type="module"
